// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Card component > accepts and applies title prop 1`] = `
<div>
  <div
    class="ant-card ant-card-bordered css-dev-only-do-not-override-mncuj7"
  >
    <div
      class="ant-card-head"
    >
      <div
        class="ant-card-head-wrapper"
      >
        <div
          class="ant-card-head-title"
        >
          Card title
        </div>
      </div>
    </div>
    <div
      class="ant-card-body"
    >
      Content
    </div>
  </div>
</div>
`;

exports[`Card component > accepts extra prop 1`] = `
<div>
  <div
    class="ant-card ant-card-bordered css-dev-only-do-not-override-mncuj7"
  >
    <div
      class="ant-card-head"
    >
      <div
        class="ant-card-head-wrapper"
      >
        <div
          class="ant-card-head-title"
        >
          Title
        </div>
        <div
          class="ant-card-extra"
        >
          <button>
            Extra
          </button>
        </div>
      </div>
    </div>
    <div
      class="ant-card-body"
    >
      Content
    </div>
  </div>
</div>
`;

exports[`Card component > renders children content 1`] = `
<div>
  <div
    class="ant-card ant-card-bordered css-dev-only-do-not-override-mncuj7"
  >
    <div
      class="ant-card-body"
    >
      Test content
    </div>
  </div>
</div>
`;

exports[`Card component > renders without crashing with no props 1`] = `
<div>
  <div
    class="ant-card ant-card-bordered css-dev-only-do-not-override-mncuj7"
  >
    <div
      class="ant-card-body"
    />
  </div>
</div>
`;
